# raytrace

./: CMakeLists.txt  readme.md
source/: Camera.cpp  Camera.hpp  Material.cpp  Material.hpp  Object.cpp  Object.hpp  Ray.hpp  Sampler.cpp  Sampler.hpp  main.cpp  ppm.cpp  ppm.h
